<resources>
    <string name="app_name">Social Calendar</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="post">Post</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="fourth_fragment">Fourth Fragment</string>
    <string name="fifth_fragment">Fifth Fragment</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Log In</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In.</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up.</string>
    <string name="password2">Password</string>
    <string name="log_in2">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo2">TODO</string>
    <string name="recover_password">Recover password</string>
    <string name="enter_your_email_and_we_ll_send_you_a_link_to_get_back_into_your_account">Enter your email and we\'ll send you a link to get back into your account.</string>
    <string name="send">Send</string>
    <string name="back_to_log_in">Back To Log In</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_email">Enter your email</string>
</resources>