<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"/>
    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/add_post"
        android:title="@string/post" />
    <item
        android:id="@+id/nav_friends"
        android:title="@string/friends"
        android:icon="@drawable/friends"/>
    <item
        android:id="@+id/nav_messages"
        android:title="@string/messages"
        android:icon="@drawable/messages"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"/>
    <item
        android:id="@+id/nav_logout"
        android:title="Logout"
        android:icon="@drawable/logout"/>

</menu>